# gnosis

./: .gitignore  GnosisProofs.lean  PROOF_OF_LIFE_LEDGER.md  README.md  ROADMAP.md  aeon_apps.test.gg  aeon_cognitive.test.gg  aeon_core.test.gg  aeon_flow_esi.gg  aeon_flow_inference.gg  aeon_flow_protocol.test.gg  aeon_flow_shell.gg  aeon_flow_speculative_decode.gg  aeon_flow_sync.gg  aeon_flux.gg  aeon_flux_navigation.gg  aeon_network.test.gg  aeon_object.gg  aeon_object.test.gg  aeon_shell_rhizome.test.gg  aeon_shell_rhizome_metabolism.gg  aeon_shell_rhizome_projections.gg  aeon_voting.test.gg  agent_mesh_gossip.gg  agent_store_provisioner.gg  ai_hello.gg  aic_bias_inducer.gg  aic_fusion_engine.gg  american_frontier.test.gg  arrow_godel.test.gg  arrow_impossibility.gg  backend_account_management.test.gg  backend_communications.test.gg  backend_cyrano_core.test.gg  backend_data_persistence.test.gg  backend_predictive_analytics.test.gg  background_daemon_telemetry.gg  beauty_monotone_cost.gg  beauty_optimality.test.gg  beauty_strict_objective.gg  (+467 more)
content/: README.md  (+2 more)
polyglot/: Cargo.toml
polyglot/c/: becky.c  lilith-daemon.c  lilith-eve-whip.c  lilith-rotated.c  lilith-wasm.c  lilith.c
polyglot/cpp/: becky.cpp
polyglot/elixir/: becky.exs
polyglot/fortran/: becky.f90  julie.f90
polyglot/go/: becky.go
polyglot/haskell/: Becky.hs
polyglot/java/: Becky.java
polyglot/kotlin/: becky.kts
polyglot/lua/: becky.lua
polyglot/ocaml/: becky.ml
polyglot/perl/: becky.pl
polyglot/php/: becky.php
polyglot/python/: becky.py
polyglot/ruby/: becky.rb
polyglot/scala/: becky.scala
polyglot/scala/.bsp/: scala-cli.json
polyglot/scala/.scala-build/: ide-envs.json  ide-inputs.json
polyglot/scripts/: scan-trending.sh
polyglot/src/: becky.rs  becky_cli.rs  cfg.rs  diagnostics.rs  gg_compiler.rs  gg_parser.rs  lib.rs  main.rs  semantic_bridge.rs  serialization.rs
polyglot/swift/: becky.swift
polyglot/tests/: ditto.rs  integration.rs
polyglot/zig/: becky.zig
(+874 files in other folders)
