[package]
name = "gnosis-polyglot"
version = "0.1.0"
edition = "2021"
description = "Universal bug detection via topological verification -- tree-sitter to GG topology compiler"

[[bin]]
name = "gnosis-polyglot"
path = "src/main.rs"

[lib]
name = "gnosis_polyglot"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"

[dev-dependencies]
tempfile = "3.10"
