[package]
name = "gnosis-polyglot"
version = "0.2.0"
edition = "2021"
description = "Universal bug detection via topological verification -- tree-sitter to GG topology compiler"

[[bin]]
name = "gnosis-polyglot"
path = "src/main.rs"

[lib]
name = "gnosis_polyglot"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tree-sitter = "0.24"

# Phase 1 languages (hand-written extractors)
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"

# Phase 2 languages (declarative extractors)
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-php = "0.23"
tree-sitter-scala = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.23"

# These may need specific version ranges
tree-sitter-kotlin = "0.3"
tree-sitter-swift = "0.6"
tree-sitter-lua = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-zig = "1.1"

[dev-dependencies]
tempfile = "3.10"
